src/objects/EBC_Application_Filter__c.object
<CustomObject>
    <description>Object to hold filters for Geo-Selection and Refinement.
Dedicated to the eBroadcast application.</description>
    <fields>
        <fullName>Audience__c</fullName>
        <description>This field will separate filters between agency and agents.</description>
        <inlineHelpText>This field will separate filters between agency and agents.</inlineHelpText>
        <label>Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Source_Object__c</fullName>
        <description>The source of data for available Picklist Values of a Picklist Application Filters</description>
        <inlineHelpText>The source of data for available Picklist Values of a Picklist Application Filters</inlineHelpText>
        <label>Data Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source_Value_Field__c</fullName>
        <description>The label that will be displayed to the client on the picklist options values</description>
        <inlineHelpText>The label that will be displayed to the client on the picklist options values</inlineHelpText>
        <label>Data Source Value Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source_Where_Clause__c</fullName>
        <label>Data Source Where Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <description>This field is used to select the type of UI (Checkbox, Date, Picklist, Text) to enter values for filters.</description>
        <inlineHelpText>This field is used to select the type of UI (Checkbox, Date, Picklist, Text) to enter values for filters.</inlineHelpText>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filter_Description__c</fullName>
        <description>This field will store the actual filter name that allows the end-user to search the data.</description>
        <inlineHelpText>This field will store the actual filter name that allows the end-user to search the data.</inlineHelpText>
        <label>Filter Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Field__c</fullName>
        <description>This field will specify the field to search in relation to the filter.</description>
        <inlineHelpText>This field will specify the field to search in relation to the filter.</inlineHelpText>
        <label>Filter Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_RelatedList_Field__c</fullName>
        <description>This field will specify the related list relation field name to search in relation to the filter.</description>
        <inlineHelpText>This field will specify the related list relation field name to search in relation to the filter.</inlineHelpText>
        <label>Filter Related List Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_RelatedList__c</fullName>
        <description>This field will specify the related list name to search in relation to the filter.</description>
        <inlineHelpText>This field will specify the related list name to search in relation to the filter.</inlineHelpText>
        <label>Filter Related List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Value__c</fullName>
        <description>This field will record the value that the eBroadcast application will use the retrieve the end-user selectable values.</description>
        <inlineHelpText>This field will record the value that the eBroadcast application will use the retrieve the end-user selectable values.</inlineHelpText>
        <label>Filter Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Level__c</fullName>
        <description>This field will separate filters by Geo-Selection and Refinement.</description>
        <inlineHelpText>This field will separate filters by Geo-Selection and Refinement.</inlineHelpText>
        <label>Search Level</label>
        <picklist>
            <picklistValues>
                <fullName>Geo-Selection</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Refinement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EBC Application Filter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Audience__c</columns>
        <columns>Search_Level__c</columns>
        <columns>Filter_Description__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Source_Object__c</columns>
        <columns>Data_Source_Where_Clause__c</columns>
        <columns>Filter_RelatedList__c</columns>
        <columns>Filter_RelatedList_Field__c</columns>
        <columns>Filter_Value__c</columns>
        <columns>Filter_Field__c</columns>
        <columns>Data_Source_Value_Field__c</columns>
        <columns>Developer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FT-{0000}</displayFormat>
        <label>EBC Application Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EBC Application Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>